--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ compiler:
   - g++
 
 before_install:
+  - sudo add-apt-repository ppa:mosquitto-dev/mosquitto-ppa -y
   - sudo apt-get -qq update
   - sudo apt-get install -y autoconf automake libtool pkg-config alsa-base alsa-utils g++ make libasound2-dev libmp3lame-dev libtolua++5.1-dev mysql-client libmysql++-dev libmosquitto-dev libmosquittopp-dev
   
