reduce debug output

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,9 @@ before_install:
   
   
 script:
-  - ls -l
-  - cd $TRAVIS_BUILD_DIR/monitord
-  - ls -l
+  - cd $TRAVIS_BUILD_DIR
   - aclocal -Im4
-  - ./auogen.sh
+  - ./autogen.sh
   - ./configure --exec-prefix=$PWD/build/ --prefix=$PWD/build/ --enable-plugins --with-mqtt --with-alsa --with-lame -with-mysql --with-lua-includes=/usr/include/lua5.1 --with-lua-suffix="5.1"
   - make
   - make install
